# FP16_benchmark

./: .gitignore  BASIC.md  CMakeLists.txt  README.md
bench/: alt_16_to_32_array.cc  alt_32_to_16_array.cc  alt_element.cc  ieee_16_to_32_array.cc  ieee_32_to_16_array.cc  ieee_element.cc
include/: benchmark.h
include/fp16/: bitcasts.h  fp16.h
test/: alt_from_fp32_value.cc  alt_to_fp32_bits.cc  alt_to_fp32_value.cc  bitcasts.cc  ieee_from_fp32_value.cc  ieee_to_fp32_bits.cc  ieee_to_fp32_value.cc  simple_bitcasts.cc  simple_test.h
